# trabalho-ed2

./: .gitignore  CMakeLists.txt  README.md  output.txt  reviewsOrig.txt  trabalho-ed2-parte1
headers/: ArvoreB.h  ArvoreVP.h  Hash.h  Huffman.h  LZ77.h  LZW.h  NoB.h  NoVP.h  ProductReview.h  Sort.h
sources/: ArvoreB.cpp  ArvoreVP.cpp  Hash.cpp  Huffman.cpp  LZ77.cpp  LZW.cpp  NoB.cpp  NoVP.cpp  ProductReview.cpp  Sort.cpp  main.cpp
